Add Enochteo card info

--- a/index.html
+++ b/index.html
@@ -3153,6 +3153,32 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+        <!-- ________  Enochteo card START ________  -->
+        <div class="card">
+          <p class="name">Enoch Owoade</p>
+          <p class="contact">
+            <i class="fa-brands fa-discord"></i>
+            <a href="https://discord.gg/enoch456" target="_blank">enoch456 </a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Enochteo" target="_blank">Enochteo</a>
+          </p>
+          <p class="about">I love music, table tennis, programming and building circuits</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/full-stack-developer/" target="_blank" title="FreeCodeCamp">FreeCodeCamp Certified Full Stack Developer</a>
+              </li>
+              <li>
+                <a href="https://cs50.harvard.edu/x/2025/" target="_blank" title="CS50X">CS50’s Introduction to Computer Science</a>
+              </li>
+              <li>
+                <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="Github: build-your-own-x">Build your own x</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Enochteo card END ________  -->
 
         <!-- ========= END ========= -->
 
