--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ antony-jacob817: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Antony Jacob</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/antony_jacob247" target="_blank">antony_jacob247</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/antony-jacob817" target="_blank">antony-jacob817</a>
+          </p>
+            <p class="about">Hi, I'm Antony Jacob, a full-stack developer passionate about building innovative web applications and constantly exploring new technologies.🚀</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://free-apis.github.io/#/" target="_blank" title="Second Resource">Free APIs</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" target="_blank" title="Third resource">Codecademy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ antony-jacob817 Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
