--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Keerthi Vasan card START ________  -->
+        <div class="card">
+          <p class="name">Keerthi Vasan P</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/keerthi-vasan05/" target="_blank">keerthi-vasan05</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/keerthivasan91" target="_blank">keerthivasan91</a>
+          </p>
+          <p class="about">I'm a Computer Science Engineering student at Cambridge Institute of Technology, excited to explore and grow in the world of tech.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://vercel.com/" target="_blank" title="First Resource">Vercel</a>
+              </li>
+              <li>
+                <a href="https://codedamn.com/ai" target="_blank" title="Second Resource">Codedamn.ai</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Third resource">ChatGPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Keerthi Vasan card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
