--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ mathncodesid card START ________  -->
+        <div class="card">
+          <p class="name">Sidney</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/mathncode_sid" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mathncode-sid" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Hello. My name is Sidney. I am passionate about AI, ML, Data Science and Python. I also take interest in Web Design and Development. Feel free to reach out for collabs or learning together</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank" title="Responsive Web Design">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Web Development">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank" title="Legacy Web Design">freeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ mathncodesid card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
