--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+       <!-- ________ EPH1123 card START ________  -->
+        <div class="card">
+          <p class="name">Eric H</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/ericharkleroad" target="_blank">ericharkleroad</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/EPH1123" target="_blank">EPH1123</a>
+          </p>
+          <p class="about">Systems Engineer interested to contribute to open-source analytics & security projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://SiliconSociety.org" target="_blank" title="Peer-to-peer job shadowing with your own private LLM tutor in the loop">Silicon Society</a>
+              </li>
+              <li>
+                <a href="https://freeCodeCamp.org" target="_blank" title="Developer tutorials, language learning, & certificates">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.wikipedia.org/" target="_blank" title="For a generally neutral perspective">Wikipedia</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ EPH1123 card END ________  --> 
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
