--- a/index.html
+++ b/index.html
@@ -114,6 +114,41 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         
+        <!-- ________ theDude card START ________  -->
+        <div class="card">
+          <p class="name">TheDude</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="#" target="_blank">N/A</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/thedudethatcodez" target="_blank">thedudethatcodez</a>
+          </p>
+          <p class="about">
+            Hey, I'm TheDude! I'm a full-stack developer.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Daily.dev is cool">daily.dev</a>
+              </li>
+              <li>
+                <a href="https://adventofcode.com/" target="_blank" title="adventofcode">Advent of Code</a>
+              </li>
+              <li>
+                <a
+                  href="https://itnext.io/how-to-create-interactive-terminal-like-website-888bb0972288"
+                  target="_blank"
+                  title="A great article on creating a terminal in a web browser."
+                >
+                Intertive Terminal like Website
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ unimaria card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
