Add my contributor card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+        <!-- ________ jadebluestar card START ________  -->
+        <div class="card">
+          <p class="name">Fiona</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/jadebluestar" target="_blank">jadebluestar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jadebluestar" target="_blank">jadebluestar</a>
+          </p>
+          <p class="about">Part time Developer, Full time yapper <br> whilst I'm not coding,
+             Im either sleeping or watching a movie or cooking :)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/FQPlEnKav48?si=ihyx4f1sumwqwxf_" target="_blank" title="First Resource">A fireship video</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/JWKadu0ks20?si=guf4BmGX7W74-UhH" target="_blank" title="Second Resource">NASA coding requirements</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/T0u5nwSA0w0?si=P2CNbhLrtWCvOffE" target="_blank" title="Third resource">Neetcode 150</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ jadebluestar card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
