--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shawn Jacobsen</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/dvs_n3m/" target="_blank">dvs_n3m</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/JacobsenShawn" target="_blank">JacobsenShawn</a>
+          </p>
+          <p class="about">New to the world of Web Dev. If there are any developers here who love to teach im open to learning.
+            dvs_n3m is also my Fortnite gamer tag if you wanna run some.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="https://www.freecodecamp.org/" title="First Resource">FreeCode Camp</a>
+              </li>
+              <li>
+                <a href="#" target="https://www.w3schools.com" title="Second Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="#" target="https://developer.mozilla.org/en-US/" title="Third resource">Mozilla Web Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
