updated the instagram username

--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ PROXIEE card START ________  -->
+        <div class="card">
+          <p class="name">PROXIEE</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/lifeofyash99?igsh=MWhwMXI3NTRhbTF2Zg==" target="_blank">lifeofyash99</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/proxiee/" target="_blank">Proxiee</a>
+          </p>
+          <p class="about">Hi! Iam Proxiee, I am graduate student excited to contribute to open source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Youtube">Youtube</a>
+              </li>
+              <li>
+                <a href="https://aistudio.google.com/" target="_blank" title="Second Resource">Google AI Studio</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Third resource">Leetcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
