--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+
+<!-- ________ Ebiziem Vitalis Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ebiziem Vitalis</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/@Blackvitalis" target="_blank">Blackvitalis</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/blackvitalis" target="_blank">blackvitalis</a>
+          </p>
+          <p class="about"> Hey!, i am Ebiziem Vitalis, A full stack developer 💻 who is passionate about learning, coding👨‍💻 and teamwork👨‍💻👨‍💻.Always open to new ideas and collaboration</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codarhq.com" target="_blank" title="First Resource">codarhq coding school</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com" target="_blank" title="Second Resource">youtube</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">w3schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ebiziem Vitalis Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
