changing some infos

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/zackweb-pro" target="_blank">zackweb-pro</a>
           </p>
-          <p class="about">Full-stack developer passionate about creating web solutions. Currently working with React, Node.js and exploring cloud technologies. Open source enthusiast looking to collaborate with other developers.</p>
+          <p class="about">Hi am a Software Engineering Student, Full-stack developer passionate about creating web solutions. Currently working with React, Node.js and exploring cloud technologies. Open source enthusiast looking to collaborate with other developers.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
