Add Sharathb5 usercard info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ Sharath Bhattiprolu Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sharath</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/sharath-bhattiprolu-0a427b227" target="_blank">_sharathb</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sharathb5" target="_blank">Sharathb5</a>
+          </p>
+          <p class="about">about you</p>
+          Hey, I am Sharath currently a rising senior at UW Madison. Looking forward to help contribue to the world!
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#https://github.com/Syknapse/Contribute-To-This-Project/blob/master/terminal_tutorial.md#quick-access-index" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Sharath* Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
