Add shivt-F5 card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shivani</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/shivsea_" target="_blank">My Twitter!</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">My GitHub page!</a>
+          </p>
+          <p class="about">Newbie programmer! Excited to learn!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=9He4UBLyk8Y&list=PLWKjhJtqVAbmMuZ3saqRIBimAKIMYkt0E&pp=0gcJCWMEOCosWNin" target="_blank" title="YouTube">Comprehensive Youtube Playlist</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/html/default.asp" target="_blank" title="Website">W3Schools! Our fav</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/frontend" target="_blank" title="Roadmap">Roadmap</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
