N1femi's Card, Added!

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ N1femi card START ________  -->
+        <div class="card">
+          <p class="name">N1femi</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/oluwanifemi-babajide-70bb2a330/" target="_blank">Oluwanifemi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/N1femi" target="_blank">N1femi</a>
+          </p>
+          <p class="about">I love to learn and have a passion for AI, Software, and Mathematics. I also like to play sports like basketball, ping-pong, and more!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://scrimba.com/home" target="_blank" title="First resource">Scrimba</a>
+              </li>
+              <li>
+                <a href="https://developers.google.com/learn" target="_blank" title="Second resource">Google Learning</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ N1femi card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
