--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+          <!-- _______________Sahil card start ________________  -->
+                   <div class="card">
+          <p class="name">Sahil Chand</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">not using</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sahil-chand-21" target="_blank">sahil-chand-21</a>
+          </p>
+          <p class="about">Hey ! I am Sahil Chand from India,currently persuing my diploma in CSE. Loves to play with codes and new in this coding journey  </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="First Resource">geeksforgeeks>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/c/JavaScriptMastery" target="_blank" title="Third resource">Best Resource in Youtube/a>
+              </li>
+            </ul>
+          </div>
+        </div>
+         <!-- _________Sahil Card ends __________________ -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
