--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ Zeeshan Ahmad card START ________  -->
+         <div class="card">
+          <p class="name">Zeeshan Ahmad</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Zeeshan13968151</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Zeeshan-Ahmad-5</a>
+          </p>
+          <p class="about">I am Computer Engineer just complete my second semester and now i just finish my js online course and now 
+            i am making new projects and explore things. people who want to share his knowledge contact me!! Thankyou
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="chat gpt">Chat GPT</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN">MDN</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Zeeshan Ahmad card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
