--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,34 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+
+        <!-- ========= Soumyosish Pal Card START =========  -->
+        <div class="card">
+          <p class="name">Soumyosish Pal</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Soumyosish" target="_blank">Soumyosish</a>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/soumyosishpal/" target="_blank">Soumyosish</a>
+          </p>
+          <p class="about">Aspiring Full Stack Web Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development" target="_blank" title="First Resource">More knowledge from here about web development</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/gatesmashers" target="_blank" title="Second Resource">Very important youtub channel for college semester exams</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/questions" target="_blank" title="Third Resource">Benificial to clear doubts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Soumyosish Pal Card END =========  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
