--- a/index.html
+++ b/index.html
@@ -115,6 +115,42 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Bharath</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Bharath" target="_blank">Bharath</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/bharath2000" target="_blank">bharath2000</a>
+          </p>
+          <p class="about">Hi, I am an sitomation tester looking to expand my skills by contributing to open source projects</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - has the best courses">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/watch?v=8XJzdjhVrpw"
+                  target="_blank"
+                  title="A great video about when you shouldn't use boolean functions"
+                >
+                  The problem with boolean functions
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
