--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name"> ANKITH SUREDNRAN </p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">N/A</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/your_user_handle" target="_blank">N/A</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">ABOUT ME : AN ASPIRING SOFTWARE ENGINEERING STUDENT, ;LEARNING AND EAGER TO CODE  </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="#" target="_blank" title="First Resource">AI CODE ASSISTOR</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="#" target="_blank" title="Second Resource">RESOURCES FOR CODING </a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="#" target="_blank" title="Third resource">COMPLIER TO RUN YOUR COD</a>
               </li>
             </ul>
           </div>
