--- a/index.html
+++ b/index.html
@@ -116,6 +116,28 @@
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
+         <div class="card">
+          <p class="name">Ether</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/chhaviluthra08" target="_blank">Ether</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <div class="card">
           <p class="name">Maria</p>
           <p class="contact">
