--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        
         <!-- ________ unimaria card START ________  -->
          <div class="card">
           <p class="name">Ether</p>
@@ -122,18 +122,18 @@
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/chhaviluthra08" target="_blank">Ether</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Trying to actively learn how to contribute more meaningfully </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://pll.harvard.edu/course/cs50s-web-programming-python-and-javascript" target="_blank" title="First Resource">CS50 W</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://pll.harvard.edu/course/cs50s-introduction-artificial-intelligence-python" target="_blank" title="Second Resource">CS50 AI</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://pll.harvard.edu/course/cs50s-introduction-programming-python" target="_blank" title="Third resource">CS50 P</a>
               </li>
             </ul>
           </div>
