--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
         
-        <!-- ________ unimaria card START ________  -->
+        <!-- ________ ether card START ________  -->
          <div class="card">
           <p class="name">Ether</p>
           <p class="contact">
@@ -139,6 +139,8 @@
           </div>
         </div>
         <div class="card">
+          <!-- ________ ether card end ________  -->
+          <!-- ________ unimaria card START ________  -->
           <p class="name">Maria</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
