--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
          <div class="card">
           <p class="name">Ether</p>
           <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/chhaviluthra08" target="_blank">Ether</a>
           </p>
