"Add my card information"

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ mnmfullmetal card START ________  -->
+        <div class="card">
+          <p class="name">Myles Gillard</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mylesgillard/" target="_blank">Myles Gillard</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/mnmfullmetal" target="_blank">mnmfullmetal</a>
+          </p>
+          <p class="about">Hi! I'm Myles, a Video Game & Software Developer building engaging worlds and intuitive software, from concept to code</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://codewithmosh.com/" target="_blank" title="First Resource">CodeWithMosh</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">w3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ mnmfullmetal card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
