--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Sanchit Potdar card START ________  -->
+        <div class="card">
+          <p class="name">Sanchit Potdar</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="www.linkedin.com/in/sanchit-potdar-a899b3250" target="_blank">Sanchit Potdar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sanchit206" target="_blank">sanchit206</a>
+          </p>
+          <p class="about">MERN Stack Developer with a Master’s degree in Computer Applications and hands-on experience from a 6-month internship. Passionate about building scalable full-stack applications. Eager to contribute to innovative projects and grow in a collaborative development environment.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">Geeks for Geeks</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@sheryians" target="_blank" title="Third resource">Sheryians Coding School</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Sanchit Potdar card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
