--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -115,7 +115,39 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Moaad Card Start________  -->
+        <div class="card">
+          <p class="name">Moaad Amer</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/moaadamer/" target="_blank">Moaad</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/moaadamer" target="_blank">Moaad</a>
+          </p>
+          <p class="about">
+            Helloooo, i'am moaad, computer science graduate learning full stack, backend oriented developement.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - has the best courses">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN">
+                  MDN
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Moaad Card End ________  -->
+
         <!-- ________ unimaria card START ________  -->
+
         <div class="card">
           <p class="name">Maria</p>
           <p class="contact">
