--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Rahul</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">sorry i don't have one</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/rahuldadige" target="_blank">Rahuldadige</a>
+          </p>
+          <p class="about">i'm a newbie developer who is interested solving real life problems using innovative solutions</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.apnacollege.in/"target="_blank" title="apnacollege">Apna college</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">geeksforgeeks</a>
+              </li>
+              <li>
+                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="Third resource">Harvard's CS50</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
