name card added

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+                <!-- ________ *Rahul card START ________  -->
         <div class="card">
           <p class="name">Rahul</p>
           <p class="contact">
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ rahul card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
