--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *Kaiming card START ________  -->
+        <div class="card">
+          <p class="name">Kaiming</p>
+          <p class="contact">
+            <i class="fab fa-x-instagram"></i>
+            <a href="https://www.instagram.com/kaimingc.0004/" target="_blank">kaimingc.004</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/kchen737" target="_blank">kchen737</a>
+          </p>
+          <p class="about">
+            Hiiiii, I'm Kaiming! I'm an undergraduate comp sci student looking for internship or part time job. Super excited to
+            learn and contribute!
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/course/former-python-mega-course-build-10-real-world-applications/learn/lecture/34362840#overview" target="_blank" title="Great Project Resources">Udemy- hands-on practices</a>
+              </li>
+              <li>
+                <a href="https://www.coursera.org/" target="_blank" title="Third resource">Coursera- learn and earn certificates</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Kaiming card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
