--- a/index.html
+++ b/index.html
@@ -114,7 +114,34 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+         
+       <!-- ________ partha card START ________  -->
+        <div class="card">
+          <p class="name">S.parthasarathi Reddy</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/SolCryptrex" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/parthasarathi-meta" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Heyy..i am partha,starting my full stack journey</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ partha card END ________  -->
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
