Add Killerdevildog card info

--- a/index.html
+++ b/index.html
@@ -116,6 +116,35 @@
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START Quaylyn Rimer / Killerdevildog  -->
+        <div class="card">
+          <p class="name">Quaylyn Rimer</p>
+          <p class="contact">
+            <i class="fa-solid fa-paper-plane"></i>
+            <a href="mailto:software.quaylynrimer@gmail.com" target="_blank">Software.Quaylynrimer@gmail.com</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/killerdevildog" target="_blank">killerdevildog</a>
+          </p>
+          <p class="about">I want to become the best in computers and programming, just like Ash Ketchum chasing greatness. 
+                            I’m all about creating cool software using languages like 
+                            ASM, C++, Rust, Python, and tools like Godot, Blender, Unity, and Vulkan.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://docs.godotengine.org/en/stable/" target="_blank" title="First Resource">Godot Docs</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksforGeeks">Geeks For Geeks</a>
+              </li>
+              <li>
+                <a href="https://opengameart.org/" target="_blank" title="OpenGameArt">OpenGameArt</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END Quaylyn Rimer / Killerdevildog  -->
+        
         <div class="card">
           <p class="name">Maria</p>
           <p class="contact">
