--- a/index.html
+++ b/index.html
@@ -3153,6 +3153,33 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+                 <!-- ________ klopezg95 card START ________  -->
+        <div class="card">
+          <p class="name">Kevin Lopez</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/anderson.lopezg/" target="_blank">anderson.lopezg</a>
+           
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/klopezg95" target="_blank">@klopezg95</a>
+          </p>
+          <p class="about">Hi Everyone i'm Kevin Lopez fullstack developer willing to connect with people and comunity!.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.youtube.com/" target="_blank" title="First Resource">YouTube😂</a>
+                </li>
+                <li>
+                  <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+                </li>
+                <li>
+                  <a href="https://platzi.com/home/" target="_blank" title="Third resource">Platzi</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ klopezg95 card END ________  -->
 
         <!-- ========= END ========= -->
 
