--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Prateek Dhanker Card START ________ -->
+        <div class="card">
+          <p class="name">Prateek Dhanker</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/prateek-dhanker07/" target="_blank">prateek-dhanker07</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/prateek-dhanker" target="_blank">prateek-dhanker</a>
+          </p>
+          <p class="about">CS'26. Into Full-stack and AI developement.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksforGeeks">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@CodeWithHarry" target="_blank" title="CWH YT Channel">Code with Harry YT channel</a>
+              </li>
+              <li>
+                <a href="https://quickref.me/" target="_blank" title="Quickref">Quickref</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Prateek Dhanker Card END ________ -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
