--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,44 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        <!-- ________ *TEMPLATE:Rama Divya* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Rama Divya</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rama-divya-veepu-608795287" target="_blank">Rama Divya</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Rama-Divya" target="_blank">Rama-Divya</a>
+          </p>
+          <p class="about">
+             I enjoy solving real-world problems through code and continuously strive to expand my skills in AI/ML and software architecture.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://www.postman.com/explore"
+                  target="_blank"
+                  title="Postman Public API Collections"
+                >
+                  Postman Public API Collections
+                </a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/backend" target="_blank" title="Backend Developer Roadmap">Backend Developer Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.tensorflow.org/tutorials" target="_blank" title="TensorFlow Tutorials">
+                  TensorFlow Tutorials
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: Rama Divya* Contributor card END ________  -->
+
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
