--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,32 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+                <!-- ________ *TEMPLATE* Meet Karnik START ________  -->
+        <div class="card">
+          <p class="name">Meet Karnik</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/meet-karnik/" target="_blank">My LinkedIn Profile</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mtkarnik99" target="_blank">My Github profile</a>
+          </p>
+          <p class="about">I'm Meet Karnik, a Full Stack Developer and AI/ML Engineer who graduated with a Master's in Computer Science from Northeastern University in December 2024. I build scalable systems handling millions of transactions and have delivered 40% performance improvements for platforms serving 1M+ daily users. I'm currently seeking full-time opportunities to architect intelligent solutions that scale.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank" title="First Resource">Free code camp course on Responsive Web Design</a>
+              </li>
+              <li>
+                <a href="https://v0.dev/" target="_blank" title="Second Resource">Build Websites using a single AI prompt</a>
+              </li>
+              <li>
+                <a href="https://designsystem.digital.gov/design-principles/" target="_blank" title="Third resource">Web design principles according to US Web Design System</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE*  Meet Karnik END ________  -->
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
