--- a/index.html
+++ b/index.html
@@ -3117,6 +3117,31 @@
         </div>
         <!-- ========= CattusX Card END =========  -->
 
+        <!-- ________ ksh1tij777 card START ________  -->
+        <div class="card">
+          <p class="name">Kshitij Verma</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Ksh1tij777" target="_blank">Ksh1tij777</a>
+          </p>
+          <p class="about">CSE undergrad and passionate about open source contributions </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="First Resource">w3 schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Second Resource">freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com" target="_blank" title="Third resource">Kaggle</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ksh1tij777 card END ________  -->
+
         <!-- ________ aarifkhan7 card START ________  -->
         <div class="card">
           <p class="name">Aarif Khan</p>
