--- a/index.html
+++ b/index.html
@@ -150,6 +150,34 @@
           </div>
         </div>
         <!-- ________ unimaria card END ________  -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Anu card START ________  -->
+        <div class="card">
+          <p class="name">Anusmita Roy </p>
+          <p class = "contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/curious-anu/" target="_blank">curious-anu</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/curious-anu" target="_blank">curious-anu</a>
+          </p>
+          <p class="about">
+            Hey there! I'm Anusmita, a passionate self-taught developer and a JEE 2026 aspirant with a love for building meaningful projects. I created projects with Python, web development (HTML, CSS, JavaScript), Flask, and even game dev with Pygame! Always learning, always creating and excited to contribute to open source projects. Let's connect and make the tech world a better place together!
+          </p>
+          <div class = "resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Anu card END ________  -->
 
         <!-- ________ Advait Desai Card START ________  -->
         <div class="card">
