Add Zuriahn-Yun card info

--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ *Zuriahn card START ________  -->
+        <div class="card">
+          <p class="name">Zuriahn Yun</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/zuriahnyun/" target="_blank">MyLinkedin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Zuriahn-Yun" target="_blank">MyGitHub</a>
+          </p>
+          <p class="Data Science undergraduate, looking into data science roles. ">Data Science undergraduate, looking into data science roles.</p>
+          <div class="resources">
+            <p>3 Portfolio Examples</p>
+            <ul>
+              <li>
+                <a href="https://zuriahn-yun.github.io/" target="_blank" title="My Portfolio">My Portfolio</a>
+              </li>
+              <li>
+                <a href="https://www.jwilber.me/projects.html" target="_blank" title="Jared Wilburs Portfolio">Jared Wilbur's Portfolio</a>
+              </li>
+              <li>
+                <a href="https://minimaxir.com/" target="_blank" title="Portfolio">Max Woolf's Portfolio</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Zuriahn Contributor card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
