--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+        <div class="card">
+          <p class="name">Sameer Pandey</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/izenigm" target="_blank">izenigm</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/zenigm" target="_blank">zenigm</a>
+          </p>
+          <p class="about">I love anime wanna be friends? Oh sorry,I am Java Dev and love making cool Projects</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/k2DSi1zGEc8?si=xq9DBlJzAvQNI9vm" target="_blank" title="Super helpful as i learned too">HTML Tutorial 1</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/ESnrn1kAD4E?si=J2LgKEy2gDWbLtO2" target="_blank" title="Awesome easy Explaination">CSS Tutorial 2</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/EerdGm-ehJQ?si=JCccArObMGoB2VPv" target="_blank" title="Detaled and complete guide">JavaScript One Short 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
