--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/KeerthanaGopal28" target="_blank">Keerthana H G</a>
           </p>
-          <p class="about">Hey I'm Keerthana!! Curently I'm unemployed student.I do</p>
+          <p class="about">Hey I'm Keerthana!! Curently I'm unemployed student.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
