--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">mmunin</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/mmunin" target="_blank">mmunin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mmunin" target="_blank">mmunin</a>
+          </p>
+          <p class="about">i am a student from germany :-) </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.phind.com/" target="_blank" title="KI alternate">Phind</a>
+              </li>
+              <li>
+                <a href="https://plantuml.com/" target="_blank" title="UML">PlantUml</a>
+              </li>
+              <li>
+                <a href="https://www.programiz.com" target="_blank" title="Coding online">Online Compiler</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
