--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,36 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ SD033 START ________  -->
+        <div class="card">
+          <p class="name">Sapana</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/SD033" target="_blank">Sapana</a>
+          </p>
+          <p class="about">
+            Hello! My name is Sapana and I am a beginner Full Stack Web Developer. Iam good at drawing and painting.
+            I am trying to be more active on Github
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://codesandbox.io/" target="_blank" title="Third resource">Code Sand Box</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ SD033 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
